GRAXConnect/main/default/objects/Grax_Mapped_Field__mdt/Grax_Mapped_Field__mdt.object-meta.xml
<CustomObject>
    <label>Grax Mapped Field</label>
    <pluralLabel>Grax Mapped Fields</pluralLabel>
</CustomObject>