GRAXConnect/main/default/objects/Grax_Mapped_Field__mdt/fields/Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_Name__c</fullName>
    <defaultValue>" "</defaultValue>
    <inlineHelpText>Name of the table column</inlineHelpText>
    <label>Column Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>