GRAXConnect/main/default/objects/Grax_Mapped_Field__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>This is the name the name of the field to display as shown in the Graphene DB</inlineHelpText>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>