GRAXConnect/main/default/objects/Grax_Mapped_Field__mdt/fields/Format_Type__c.field-meta.xml
<CustomField>
    <fullName>Format_Type__c</fullName>
    <defaultValue>"text"</defaultValue>
    <label>Format Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>currency</fullName>
                <default>true</default>
                <label>currency</label>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>location</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>